first raw working cycle for rivers generations

--- a/rivers_generations.ipynb
+++ b/rivers_generations.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,6 +222,55 @@
    "metadata": {},
    "source": [
     "### Дерева в геометрії 1 на 1 і dx змінюємо від 0 до 1 із достатньо малим кроком"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = rs.Model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.integr_params.integration_radius"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.094"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.5 - 0.03) / 5"
    ]
   },
   {
@@ -1370,7 +1419,7 @@
     "model.solver_params.adaptive_refinment_steps = 1\n",
     "model.solver_params.quadrature_degree = 4\n",
     "\n",
-    "model.number_of_steps = 100\n",
+    "model.number_of_steps = 150\n",
     "\n",
     "model.ds = 0.005\n",
     "model.bifurcation_min_dist = 0.005\n",
@@ -1378,7 +1427,7 @@
     "model.height = 1.\n",
     "model.eta = 1.\n",
     "\n",
-    "for model.dx in np.arange(model.integr_params.integration_radius, model.width - model.integr_params.integration_radius, 0.01):\n",
+    "for model.dx in np.arange(model.integr_params.integration_radius, model.width / 2., (model.width / 2. -model.integr_params.integration_radius) / 5.):\n",
     "    model.initializeDirichlet()\n",
     "    model.rivers[1].addPoint(rs.Polar(model.integr_params.integration_radius, 0), model.river_boundary_id)\n",
     "    growRiver(model, plot_period = 50)\n",
