river gen script up to date

--- a/rivers_generations.ipynb
+++ b/rivers_generations.ipynb
@@ -43,9 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected character after line continuation character (riversimdefs.py, line 77)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m~/.local/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3251\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import riversimdefs as rs\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/Documents/riversimpy/riversimdefs.py:77\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"all_steps_time\" : time.time(), \\\u001b[0m\n\u001b[0m                                      \n^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     ]
+    }
+   ],
    "source": [
     "import riversimdefs as rs"
    ]
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -124,26 +136,6 @@
     "    model.rivers[1].addPoint(rs.Polar(model.integr_params.integration_radius, 0), model.region_params.river_boundary_id)\n",
     "    rs.growRiver(model, plot_period = 50)\n",
     "    rs.save(model, name_prefix + \"__width=\" + str(model.width) + \"__heigth=\" + str(model.height) + \"__ds=\"+str(model.ds) + \"__bifurcation_min_dist=\" + str(model.bifurcation_min_dist) + \"__eta=\" + str(model.eta) + \"__dx=\" + str(model.dx) + \".json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = rs.Model()\n",
-    "rs.open(model, \"debug.json\")\n",
-    "rs.growRiver(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import riversimdefs"
    ]
   }
  ],
