--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -13,38 +13,70 @@
 \tableofcontents
 
 \chapter*{Wprowadzenie}
+
+Wody podziemne mozna opisać równaniem Laplace'a. Pada deszcz i wynika erozja
+
+
+
 \addcontentsline{toc}{chapter}{Wprowadzenie}
 
 \chapter{Model teoretyczny}
-\section{Definicje}
-\section{Blabalizator różnicowy}
+\section{Wody podziemne}
+\section{Uproszcenie}
 
-\chapter{Wcześniejsze implementacje blabalizatora
-  różnicowego}
-\section{Podejście wprost}
-\section{Metody wykorzystujące teorię Głombaskiego}
-\section{Metody wykorzystujące własności fetorów $\sigma$}
+\chapter{Rozwiązanie numeryczne i struktura oprogramowania}
+\section{Dyzajn i glowne cele oprogromawonia. Szybkość działania vs szybkość prototypowenia.}
+\subsection{Geometria}
+\subsection{Warunki brzegowe}
+\subsection{Generacja meshu}
+\subsection{Rozwiazanie}
+\subsection{Calkowanie parametrow szeregu}
+\subsection{IO i inne}
+\section{RiverSim}
+\section{pyriversim}
 
-\chapter{Teoria fetorów $\sigma$-$\rho$}
+\chapter{Weryfikacja i walidacja oprogramowania}
+\section{Zbiezność rozwiazania}
+\section{Zbiezność calkowania i porownanie z wynikiem analitycznym}
+\section{Optymalizacja predkosci i dokladności}
 
-\chapter{Dokumentacja użytkowa i~opis implementacji}
+
+
+\chapter{Przyklady obliczen}
+\section{Probabilistyczny wzrost rzeki a potegowe prawo.}
+\section{Ewolucja zwrotna}
+\section{Naczynia krwionosne}
 
 \chapter{Podsumowanie}
 
 \appendix
 
-\chapter{Główna pętla programu zapisana w~języku T\=oFoo}
+\chapter{Główna pętla programu}
 
 \chapter{Przykładowe dane wejściowe algorytmu}
-
-\chapter{Przykładowe wyniki blabalizy
-    (ze~współczynnikami~$\sigma$-$\rho$)}
 
 \begin{thebibliography}{99}
 \addcontentsline{toc}{chapter}{Bibliografia}
 
-\bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
-    function}, Mathematica Absurdica, 117 (1965) 338--9.
+\bibitem[Triangle]{shewchuk} Jonathan Richard Shewchuk, \textit{Delaunay Refinement Algorithms for Triangular Mesh Generation, Computational Geometry: Theory and Applications} 22(1-3):21-74, May 2002. PostScript (5,128k, 54 pages).
+
+\bibitem[dealII94]{dealii} Daniel Arndt and Wolfgang Bangerth and Marco Feder and
+Marc Fehling and Rene Gassm{\"o}ller and Timo Heister
+and Luca Heltai and Martin Kronbichler and
+Matthias Maier and Peter Munch and Jean-Paul Pelteret
+and Simon Sticko and Bruno Turcksin and David Wells. \textit{The \texttt{deal.II} Library, Version 9.4}.
+Journal of Numerical Mathematics. Journal of Numerical Mathematics, vol. 30, no. 3, pages 231-246, 2022.
+DOI: 10.1515/jnma-2022-0054.
+
+\bibitem[Tethex]{artemiev} Mikhail Artemiev. \textit{Tethex}. https://github.com/martemyev/tethex.
+
+\bibitem[Boost]{boost} Boost.org
+
+\bibitem[many]{many} Many more.. 
+
+\bibitem[riversim]{riversim} https://github.com/okmechak/RiverSim
+
+\bibitem[riversimpy]{riversimpy} https://github.com/okmechak/RiverSimPY
 
 \end{thebibliography}
 
