add missing bibliography references and fix misspelings

--- a/master_thesis/bibliography.bib
+++ b/master_thesis/bibliography.bib
@@ -1,3 +1,47 @@
+@misc{tethex,
+  title = {Tethex: converts all simplices (tetrahedra and triangles) from Gmsh mesh file into bricks. github.com/martemyev/tethex.},
+  url = {https://github.com/martemyev/tethex}
+}
+
+@misc{boost,
+  title = {Boost: The Boost project provides free peer-reviewed portable C++ source libraries. www.boost.org.},
+  url = {https://www.boost.org}
+}
+
+@misc{riversim,
+  title = {River Growth Simulation (RiverSim): Simulation of river growth using model based on Laplace equation. github.com/okmechak/RiverSim.},
+  url = {https://github.com/okmechak/RiverSim}
+}
+
+@misc{riversimpy,
+  title = {River growth simulation(RiverSim) Python library: Simulation of river growth using model based on Laplace equation. github.com/okmechak/RiverSimPy.},
+  url = {https://github.com/okmechak/RiverSimPy}
+}
+
+% not sure if I properly cited
+@book{szewczuk1996triangle, 
+ title = {Triangle: Engineering a 2D Quality Mesh Generator and Delaunay Triangulator, in 'Applied Computational Geometry: Towards Geometric Engineering'},
+ author = {Jonathan Richard Shewchuk},
+ year = {1996},
+ publisher = {Springer-Verlag}
+}
+
+@article{dealII94,
+  title     = {The \texttt{deal.II} Library, Version 9.4},
+  author    = {Daniel Arndt and Wolfgang Bangerth and Marco Feder and
+               Marc Fehling and Rene Gassm{\"o}ller and Timo Heister
+               and Luca Heltai and Martin Kronbichler and
+	       Matthias Maier and Peter Munch and Jean-Paul Pelteret
+	       and Simon Sticko and Bruno Turcksin and David Wells},
+  journal   = {Journal of Numerical Mathematics},
+  doi       = {10.1515/jnma-2022-0054},
+  year      = {2022},
+  volume    = {30},
+  number    = {3},
+  pages     = {231-246},
+  url       = {https://dealii.org/deal94-preprint.pdf}
+}
+
 @article{carleson2002laplacian
 , title = {Laplacian path models}
 , author = {Carleson, Lennart and Makarov, Nikolai}
@@ -176,14 +220,15 @@
 }
 
 @article{petroff2011geometry, 
-title={Geometry of valley growth}, 
-volume={673}, 
-DOI={10.1017/S002211201100053X}, 
-journal={Journal of Fluid Mechanics}, 
-publisher={Cambridge University Press}, 
-author={Petroff, A. P. and Devauchelle, O. and Abrams, D. M. and Lobkovsky, A. E. and Kudrolli, A. and Rothman, D. H.},
-year={2011}, 
-pages={245–254}}
+  title={Geometry of valley growth}, 
+  volume={673}, 
+  DOI={10.1017/S002211201100053X}, 
+  journal={Journal of Fluid Mechanics}, 
+  publisher={Cambridge University Press}, 
+  author={Petroff, A. P. and Devauchelle, O. and Abrams, D. M. and Lobkovsky, A. E. and Kudrolli, A. and Rothman, D. H.},
+  year={2011}, 
+  pages={245–254}
+}
 
 @comment { BIBTEX_AUTO - BIBTEXSEARCH }
 @article{petroff2012four
@@ -494,4 +539,26 @@ pages={103–121}
      title =     "Les fontaines publiques de la ville de Dijon" ,
      year =      "1856" ,
      publisher = "Victor Dalmont"
+}
+
+@article{yi2017symmetric,
+  title={Symmetric rearrangement of groundwater-fed streams},
+  author={Yi, Robert and Cohen, Yossi and Devauchelle, Olivier and Gibbins, Goodwin and Seybold, Hansj{\"o}rg and Rothman, Daniel H.},
+  journal={Proceedings of the Royal Society A: Mathematical, Physical and Engineering Sciences},
+  volume={473},
+  number={2207},
+  pages={20170539},
+  year={2017},
+  publisher={The Royal Society Publishing}
+}
+
+@article{devauchelle2017laplacian,
+  title={Laplacian networks: Growth, local symmetry, and shape optimization},
+  author={Devauchelle, Olivier and Szymczak, Piotr and Pecelerowicz, Michal and Cohen, Yossi and Seybold, HJ and Rothman, Daniel H},
+  journal={Physical Review E},
+  volume={95},
+  number={3},
+  pages={033113},
+  year={2017},
+  publisher={APS}
 }
