--- a/master_thesis/bibliography.bib
+++ b/master_thesis/bibliography.bib
@@ -1,3 +1,18 @@
+@book{Stroustrup1997,
+  added-at = {2011-06-24T15:34:23.000+0200},
+  author = {Stroustrup, Bjarne},
+  biburl = {https://www.bibsonomy.org/bibtex/2eb6416dc674626f799b06b8e736513b8/voj},
+  edition = {3rd},
+  interhash = {b56f234767b49bd7d47bf2f284a825ab},
+  intrahash = {eb6416dc674626f799b06b8e736513b8},
+  isbn = {978-0-201-88954-3},
+  keywords = {c++ programming},
+  publisher = {Addison-Wesley},
+  timestamp = {2012-12-31T15:38:48.000+0100},
+  title = {The C++ programming language},
+  year = 1997
+}
+
 @misc{tethex,
   title = {Tethex: converts all simplices (tetrahedra and triangles) from Gmsh mesh file into bricks. github.com/martemyev/tethex.},
   url = {https://github.com/martemyev/tethex}
@@ -18,12 +33,19 @@
   url = {https://github.com/okmechak/RiverSimPy}
 }
 
-% not sure if I properly cited
-@book{szewczuk1996triangle, 
- title = {Triangle: Engineering a 2D Quality Mesh Generator and Delaunay Triangulator, in 'Applied Computational Geometry: Towards Geometric Engineering'},
- author = {Jonathan Richard Shewchuk},
- year = {1996},
- publisher = {Springer-Verlag}
+@incollection{szewczuk1996triangle,
+  author = {Jonathan Richard Shewchuk},
+  title = {Triangle:  {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and
+    {D}elaunay {T}riangulator},
+  booktitle = {Applied Computational Geometry:  Towards Geometric Engineering},
+  editor = {Ming C. Lin and Dinesh Manocha},
+  series = {Lecture Notes in Computer Science},
+  volume = 1148,
+  publisher = {Springer-Verlag},
+  pages = {203--222},
+  month = may,
+  year = 1996,
+  note = {From the First ACM Workshop on Applied Computational Geometry}
 }
 
 @article{dealII94,
