master thesis in progress..

--- a/master_thesis/bibliography.bib
+++ b/master_thesis/bibliography.bib
@@ -1,3 +1,12 @@
+@book{python3,
+ author = {Van Rossum, Guido and Drake, Fred L.},
+ title = {Python 3 Reference Manual},
+ year = {2009},
+ isbn = {1441412697},
+ publisher = {CreateSpace},
+ address = {Scotts Valley, CA}
+}
+
 @book{Stroustrup1997,
   added-at = {2011-06-24T15:34:23.000+0200},
   author = {Stroustrup, Bjarne},
