--- a/master_thesis/RiverSim_master_thesis.tex
+++ b/master_thesis/RiverSim_master_thesis.tex
@@ -1,14 +1,59 @@
 \documentclass[]{pracamgr}
 
+\usepackage{tcolorbox}
+\tcbuselibrary{minted,breakable,xparse,skins}
+\definecolor{bg}{gray}{0.95}
+\DeclareTCBListing{mintedbox}{O{}m!O{}}{%
+  breakable=true,
+  listing engine=minted,
+  listing only,
+  minted language=#2,
+  minted style=default,
+  minted options={%
+    linenos,
+    gobble=0,
+    breaklines=true,
+    breakafter=,,
+    fontsize=\small,
+    numbersep=8pt,
+    #1},
+  boxsep=0pt,
+  left skip=0pt,
+  right skip=0pt,
+  left=25pt,
+  right=0pt,
+  top=3pt,
+  bottom=3pt,
+  arc=5pt,
+  leftrule=0pt,
+  rightrule=0pt,
+  bottomrule=2pt,
+  toprule=2pt,
+  colback=bg,
+  colframe=orange!70,
+  enhanced,
+  overlay={%
+    \begin{tcbclipinterior}
+    \fill[orange!20!white] (frame.south west) rectangle ([xshift=20pt]frame.north west);
+    \end{tcbclipinterior}},
+  #3}
+
 \usepackage{wrapfig}
 \usepackage{graphicx}
 \usepackage{subfig}
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{cite}
+\usepackage{listings} %c++ code snippet
+\usepackage{xcolor} %c++ code snippet
+\lstset { %
+    language=C++,
+    %backgroundcolor=\color{black!5}, % set backgroundcolor
+    basicstyle=\footnotesize,% basic font setting
+} %c++ code
 
 \begin{document}
-
+  
   \maketitle
 
   %tu idzie streszczenie na strone poczatkowa
@@ -365,45 +410,114 @@
 
   \chapter{Rozwiązanie numeryczne i struktura oprogramowania}
 
-      Z matematycznego modelu dla opisu sieci rzecznych otrzymujemy rownania dla opisu wód podziemnych w postaci równania Laplacea \ref{laplace}(lub Poissona \ref{poisson}). W ogólnym przypadku równanie Laplace można rozwiązać metodami numerycznymi, a w szczegolności w tej pracy skorzystano z metody skończonych elementów.\par
+    \hspace{1em} \= Pole wód podziemnych kształtuję erozje w oklicy żródła i jak skutek dynamikę i rozwój sięci. Z matematycznego modelu dla opisu sieci rzecznych otrzymujemy równania dla opisu wód podziemnych w postaci równania Laplacea \ref{laplace}(lub Poissona \ref{poisson}). Pole w okolicy źródła jest aproxymowane współcznynnikami $a_i$ (\ref{a1} \ref{a2} \ref{a3}). Całkowanie współcznynników jak i rozwiązywanie też w swoją kolej wymaga metod numerycznych. W ogólnym przypadku równanie Laplace można rozwiązać metodami numerycznymi, a w szczegolności w tej pracy skorzystano z metody skończonych elementów. \\ \indent
+    %В попередніх проектах вже було представлені рішення для задачі еволюції мережі річки. Один з розв'язків був написаний з використанням Фреефем++ і Матлаб. Однак для отримання і ще більших мереж річок потрібен був оптимальніший розв'язок. Другою вимогою було використання тільки технологій із відкритим вихідним кодом, адже не кожен має можливість придбати Матлаб. Вибір припав на C++\cite{Stroustrup1997} та Python. Адже ці мови програмування є одними з найбілш росповсюдженних, а також містять в собі багато бібліотек із відкритим кодом, що полегшує написання програм. C++ -- з одного боку, він дуже швидкий, але вимогливий до написання. С++ містить реалізацію частини програми, яка займає є складною в обчисленнях, такі як алгоритми для роботи із геометрією, генерацією сітки, розязок диференціальних рівняннь. Python\cite{python3} -- має меншу обчислювальну ефективність, але набагато швидший у розробці програмного забезпечення і надає інтерактивний інструмент для написання скрипту -- Jupyter.  
+    W poprzednich projektach prezentowano już rozwiązania problemu ewolucji sieci rzecznej. Jedno z rozwiązań zostało napisane przy użyciu Freefem++ i Matlaba. Jednak aby uzyskać jeszcze większe sieci rzeczne, potrzebne było bardziej optymalne rozwiązanie. Drugim wymogiem było korzystanie wyłącznie z technologii z otwartym kodem źródłowym, ponieważ nie każdy ma możliwość zakupu Matlaba. Wybór padł na C++\cite{Stroustrup1997} i Python\cite{python3}. W końcu te języki programowania należą do najbardziej rozpowszechnionych, a także zawierają wiele bibliotek open source, co ułatwia pisanie programów. C++ - z jednej strony jest bardzo szybki, ale wymagający w pisaniu. C++ zawiera implementację części programu, która jest złożona w obliczeniach, takich jak algorytmy pracy z geometrią, generowanie siatki i rozwiązywanie równań różniczkowych. Python — ma mniejszą wydajność obliczeniową, ale jest znacznie szybszy w tworzeniu oprogramowania i zapewnia interaktywne narzędzie do tworzenia skryptów — Jupyter.
 
-      Pole wód podziemnych, którę kształtuję erozje w oklicy żródła i jak skutek dynamikę i rozwój sięci, jest uproszczane do współcznynników $a_i$ (\ref{a1} \ref{a2} \ref{a3}) całkowanie których też w swoją kolej wymaga metod numerycznych.\par
-      
-      Jednem z celów projektu było otrzymanie oprogramowania które by było szybkim w wyliczaniu powyższych zagadnień, a tak że szybkim w prototypowaniu. Wybór padł na C++\cite{Stroustrup1997} i Python. C++ -- z jednej strony jest bardzo szybkim, ale wymagający do napisania, w nim realizowano części programu które są czasochłonne. Python -- ma mniejsża wydajnoś oblicznenia,  ale o wiele szybszy w rozwoju oprogramowaniu. TODO: \cite{skjdfkjdsfh}   
-      
-      Deal.II\cite{dealII94} to biblioteka programu C++ przeznaczona do obliczeniowego rozwiązywania równań różniczkowych cząstkowych przy użyciu adaptacyjnych elementów skończonych. Wykorzystuje najnowocześniejsze techniki programowania, aby zaoferować nowoczesny interfejs do złożonych struktur danych i algorytmów.
+    \begin{figure}[H]
+      \centering
+      \includegraphics[width=1\textwidth]{figs/ProgramWorkflowMainIllustration.png}
+      %(1) Початкова геометрія, задавання місць на границі звідки буде рости річка, граничні умови. (2) Початкова мережа річки(можна не задавати). (3) Спрощення геометрії річки. (4) Генерація дрібнозернистого мешу. (5) Розв'язок диференційних рівнянь. (6) Визначення параметрів ряду довкола джерел. (2) Ріст мережі річки.
+      \caption {(1) Geometria początkowa, ustalenie miejsc na granicy, z których rzeka będzie wypływać i warunki brzegowe. (2) Początkowa sieć rzeki (opcjonalnie). (3) Uproszczenie geometrii rzeki. (4) Generowanie drobnoziarnistej siatki. (5) Rozwiązywanie równań różniczkowych. (6) Wyznaczanie parametrów szeregu wokół źródeł. (2) Wzrost sieci rzecznej.}
+      \label{program_workflow}
+    \end{figure}
 
+    %Метод конечних елементів вимагає визначення геометрії області, потім її дискретизація, створення лінійних рівнянь, розв’язування рівнянь, інтегрування коефіцієнти $a_i$ розкладу в ряд. Наведені вище кроки формують структуру програмного забезпечення \ref{program_workflow}.
+    Metoda elementów skończonych wymaga wyznaczenia geometrii obszaru, następnie jej dyskretyzacji, utworzenia równań liniowych, rozwiązania równań, zintegrowania współczynników rozszerzenia $a_i$ w szereg. Powyższe kroki tworzą strukturę oprogramowania \ref{program_workflow}.
+      
+    W trakcie tworzenia oprogramowania było stworzono dwa rzowiązania: RiverSim\cite{riversim} - program który zawiera wszystkie algorytmy dla generacji sieci rzecznych, riversimpy\cite{riversimpy} - biblioteka w Pythonie które zawiera algorytmy ułatwiające tworzenie skryptów dla symulacji wzrostu sieci w polu Laplasowskim. 
+    RiverSim zawiera niektórę dodatkowe algorytmy dla odwracalnej ewolucji wsztecznej i do przodu, a poza tym RiverSim i riversimpy zawierają tę same algorytmy, w podalszym opisie głównie skupimysię na riversimpy. 
+
+    \section{Geometria}
+      
+    % В реальних середовищах еволюції русла річок даного типу, ми можемо зустріти цілий ряд чинників, котрі мають вплив на поле підземних вод. Наприклад, це можуть бути гори звідки регулярно надходить потік води, озеро котре може слугувати кінцевою точкою або початком річки. Мережа річки теж має вплив на поле підземних вод і багато інших чинників. Ця довільність геометрії продемонстрована на малюнку \ref{border_examples}. І що б охопити всю цю довільність геометрії, було створено цілий ряд класів і функцій. Деякі найголовніші класи і функції: Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region і функція BoundaryGenerator.
+      W rzeczywistych środowiskach ewolucji tego typu koryt rzecznych możemy napotkać szereg czynników, które mają wpływ na pole wód gruntowych. Na przykład mogą to być góry, z których regularnie wypływa strumień wody, jezioro, które może służyć jako punkt końcowy lub początek rzeki. Sieć rzeczna ma również wpływ na pole wód gruntowych i wiele innych czynników. Ta arbitralność geometrii jest pokazana na rysunku \ref{border_examples}.
+      
       \begin{figure}[H]
         \centering
-        \includegraphics[width=1\textwidth]{figs/ProgramWorkflow.jpg}
-        \caption {Schemat działania programu RiverSim.}
-        \label{program_workflow}
+        \includegraphics[width=1\textwidth]{figs/geometry_examples.png}
+        \caption {Szereg przykładów granicy:  prostokąt (1),  basen rzeki aproksymoway łamą linią (2), granica zawierająca granicę(3), brzegi nie powiązane topologicznie (4), sieć rzeki (5).}
+        \label{border_examples}
       \end{figure}
 
+      Aby pokryć całą tę arbitralność geometrii, stworzono szereg klas i funkcji\ref{geometria}. Niektóre z najważniejszych klas i funkcji to Point, Polar, Line, Boundary, BoundaryConditions, Sources, Branch, Rivers, Region i funkcja BoundaryGenerator.
       
-    
+      \begin{figure}[H]
+        \centering
+        \includegraphics[width=0.9\textwidth]{figs/GeometryClasses.png}
+        \caption {Geometria.}
+        \label{geometria}
+      \end{figure}
 
-    
-    
-    \cite{szewczuk1996triangle}
-    
-    \cite{tethex}
-    \cite{boost}
-    \cite{riversim}
-    \cite{riversimpy}
-
-    \section{Dyzajn i główne cele oprogromawonia. Szybkość działania a szybkość prototypowenia.}
+      Najpierw jest zadawany szereg
       
-      Metoda FEM na początku wymaga zdefiniowanie domeny, potem jej descrtetyzacji, tworzenie równań liniowych, rozwiązanie równań i po otrzymaniu wyniku możemy kontynuować obliczenie, na przykład całkowanie współcznynników $a_i$. Powyższe kroki i kształtują strukturę oprogramowania. 
-
-
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      Głównie geometrie możemy podzielić
 
       
 
-      \subsection{Geometria}
+      
+        \begin{wrapfigure}{r}{0.5\textwidth}
+          \begin{center}
+            \vspace{-20pt}
+            \includegraphics[width=0.45\textwidth]{figs/descritization_reducing.jpg}
+          \end{center}
+          \caption {Ilustracja algorytmu wygładzenie brzegu.}
+          \label{descritization_reducing}
+        \end{wrapfigure}
+        
+        Najbardziej dynamiczną cześcią granicy jest sieć rzeczna. Z każdym krokiem symulacji sięć rośnie o krok proporcionalny do $a_1^{\eta}$. Przy małych współczynnikach $a_1$ i $a_2$ otrzymamy prosty brzeg z mała krzywizną, a nadmiarową deskretyzacje co w swoją kolej zwiekszy czas rozwiązywani. Dla tego była wrpowadzony algorytm wygładzenie linii.
+
+        Dany algorytm iteruję po punktach brzegu  zaczynając od pewnej długości zdefiniowaną parameterem \textit{ignored distance}. Dalej są wyliczane i sumowanę kąty pomiędzy sąsiednimi segmentami. Dopóki sumaryczny kąt jest poniżej kątu definiowanego przez parameter \textit{min degree}.\par
+
+        Każdy punk brzegu może być początkiem rozwoju sieci rzecznej. Współrżędne źródeł są zadawne przez strukturę danych \textit{Source}. \textit{Source} zawiera informacje o nazwie źródła, o konkretnym brzegu(o ile brzeg może składać się z dowolnej ilości poligonów) i o pozycji współrzędnej na brzegu(zaczynając od zera). 
+
+        Wzrost rzeki zaczyna sie od brzegu i jest perpendycularny  
+
+        \begin{figure}[H]
+          \centering
+          \includegraphics[width=1\textwidth]{figs/source_dirrection.jpg}
+          % Демонстрація впливу напрямку лінії на напрям перпендикуляра. У випадку напрямку за годинниковою стрілкою(1), напрямок буде назовні. Проти годинникової стрілки(2) - до середини. 
+          \caption {Wykazanie wpływu kierunku linii na kierunek prostopadłej. W przypadku kierunku zgodnego z ruchem wskazówek zegara (1) kierunek będzie na zewnątrz. Przeciwnie do ruchu wskazówek zegara (2) - do środka.}
+          \label{source_dirrection}
+        \end{figure}
+
+        %При задаванні початкової координати джерелла не вказується його напрямок, лише позиція. В даному випадку ріст русла річки починається з ерозії при самому березі і є перпендикулярним до лінії берегу в даному пункті. Кут перпендикулярної лінії в даній точці границі визначається автоматично з точність до $\pi$. Щоб позбутися цієї не точності $\pi$ при задаванні границі теж врахомується напрям пунктів, а саме напрям вибирається з лівою сторони від напрямку заданого пунктами на границі.
+        Przy określaniu początkowej współrzędnej źródła nie jest wskazywany jego kierunek, a jedynie jego położenie. W tym przypadku rozrost koryta zaczyna się od erozji na samym brzegu i jest w tym miejscu prostopadły do linii brzegowej. Kąt prostej prostopadłej w danym punkcie granicy wyznaczany jest automatycznie z dokładnością $\pi$. Aby pozbyć się tej $\pi$ niedokładności, kierunek punktów jest również brany pod uwagę podczas ustawiania granicy, a mianowicie kierunek jest wybierany od lewej strony kierunku określonego przez punkty na granicy.
+        
+        %\begin{lstlisting}
+        %  class Boundary
+        %  {
+        %      public:
+        %          Boundary(){};
+        %          Boundary(t_PointList v, t_LineList l): vertices{v}, lines{l} {};
+        %          t_PointList vertices;
+        %          t_LineList lines;
+        %          void Append(Boundary& boundary);
+        %          void ReplaceElement(t_vert_pos vertice_pos, Boundary& boundary);
+        %          void FixLinesIndices(bool is_closed_boundary = false);
+        %          Boundary generateSmoothBoundary(double min_degree, double ignored_distance);
+        %          bool operator==(Boundary& simple_boundary) const;
+        %  };
+        %\end{lstlisting}
+
+        Brzeg jest zdefiniowany przez 
+
       \subsection{Warunki brzegowe}
       \subsection{Generacja meshu}
       \subsection{Rozwiazanie}
+
+      Deal.II\cite{dealII94} to biblioteka programu C++ przeznaczona do obliczeniowego rozwiązywania równań różniczkowych cząstkowych przy użyciu adaptacyjnych elementów skończonych. Wykorzystuje najnowocześniejsze techniki programowania, aby zaoferować nowoczesny interfejs do złożonych struktur danych i algorytmów.
+
       \subsection{Calkowanie parametrow szeregu}
       \subsection{IO i inne}
     \section{RiverSim}
